# rad-followup-auditor

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  PROJECT_STATE.md  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: HUMAN_REVIEW.md  demo-media.md  release.md
docs/validation/: validation_report.md
scripts/: build_native.py  build_validation_corpus.py  generate_demo_media.py  run_validation.py  setup-devops.ps1
src/rad_followup_auditor/: __init__.py  analysis.py  cli.py  config.py  review.py  rules.py  schemas.py
src/rad_followup_auditor/app/: main.py
src/rad_followup_auditor/data/: __init__.py  synthetic.py
src/rad_followup_auditor/extraction/: __init__.py  engine.py  negation.py  normalizer.py  patterns.py
src/rad_followup_auditor/report/: __init__.py  generate.py
tests/: test_extraction.py  test_negation.py  test_normalizer.py  test_outputs_and_rules.py  test_synthetic.py  test_validation_script.py
tests/data/: validation_reports.csv
